# AdM_TP

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/model_A/: model.joblib  params.yaml
artifacts/model_B/: model.joblib  params.yaml
artifacts/model_C/: model.joblib
artifacts/model_D/: model.joblib  params.yaml
docs/: walkthrough.md
notebooks/: 00_eda.ipynb  00_eda_lb.ipynb  00_model_Baseline.ipynb  01_model_A.ipynb  02_model_B.ipynb  03_model_C.ipynb  03_model_Lu.ipynb  03_model_xgboost.ipynb  04_model_D.ipynb  05_ensemble.ipynb
src/: __init__.py  data_loader.py  evaluation.py  model_registry.py
