[project]
name = "adm-tp"
version = "0.1.0"
description = "Ensemble binary classification - Team project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "joblib",
    "pyyaml",
    "jupyter",
    "ipykernel",
]

[project.optional-dependencies]
boost = [
    "xgboost",
    "lightgbm",
]
optuna = [
    "optuna",
]
